--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #1A1A1D;
+  background-color: rgb(245, 245, 245);
 }
 
 .container {
@@ -14,6 +14,7 @@
   border-radius: 8px;
   height: 60%;
   width: 35%;
+	box-shadow: 1px 3px 5px rgba(0, 0, 0, .5);
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
