--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -18,7 +18,7 @@ html, body {
   text-align: center;
   height: 100vh;
   align-items: center;
-  background-color: #1A1A1D;
+  background-color: rgb(245, 245, 245);
 }
 
 .joinInnerContainer {
@@ -29,13 +29,14 @@ html, body {
   border-radius: 0;
   padding: 15px 20px;
   width: 100%;
+	box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
 
 .heading {
-  color: white;
+  color: rgb(27, 27, 126);
   font-size: 2.5em;
   padding-bottom: 10px;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid rgb(158, 158, 163);
 }
 
 .button {
@@ -48,6 +49,7 @@ html, body {
     display: inline-block;
     border: none;
     width: 100%;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
 
 .mt-20 {
