--- a/client/src/components/TextContainer/TextContainer.css
+++ b/client/src/components/TextContainer/TextContainer.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 100px;
-  color: white;
+  color: rgb(87, 87, 87);
   height: 60%;
   justify-content: space-between;
 }
